syntax = "proto3";

package auth;

option go_package = "admin-portal/proto/auth;authpb";

import "google/protobuf/empty.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Activate(ActivateRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string role     = 3;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
}

message ActivateRequest {
  string user_id = 1;
}
